Bug 1874314 - Better anti-aliasing for subpixel rectangles. r=aosmond a=RyanVM

The existing distance-to-edge AA scheme breaks down somewhat when rectangles
have subpixel areas. We need to bias the AA to account for this situation when
the scales get to these subpixel sizes.

Differential Revision: https://phabricator.services.mozilla.com/D215095